# ai-muni-rec

./: .env.example  PREGUNTAS_DISPONIBLES.md  README.md  pyproject.toml
data/processed/: DATOS_MUNICIPIOS_19_10_columns.txt  combined_municipal_columns.txt  dataset-081025_columns.txt  dataset_municipal.csv  dataset_municipal_unificado.csv  dataset_municipal_v2.csv  indicators_municipal.csv  indicators_municipal_v2.csv  municipios.txt
data/raw/: DATOS_MUNICIPIOS_19_10.xlsx  DATOS_MUNICIPIOS_19_10_preview.csv  combined_municipal.csv  dataset-081025-desc.txt  dataset-081025.csv  pobreza_nivel_municipal.csv
knowledge/: Procesamiento_lenguaje-og.pl  Procesamiento_lenguaje.pl  facts.pl  queries.pl  rules.pl  utils.pl
notebooks/: data_imputation.ipynb  data_imputation_indicators.ipynb  data_imputation_kmeans.ipynb  exploration.ipynb  ind.py
scripts/: add_nans.py  ejemplo_pyswip.py  filter_rcols copy.py  filter_rcols.py  indicators_generator.py  make_dataset.py  norm_names.py  test_prolog_integration.py  test_queries.py
src/ai_muni_rec/: config.py  main.py
src/ai_muni_rec/core/: data_loader.py  query_processor.py
src/ai_muni_rec/ui/: __init__.py  app.py  chat_view.py  municipality_selector.py  quick_query_buttons.py  styles.py
