[project]
name = "ai-muni-rec"
version = "0.1.0"
description = "A recommendation system for Oaxaca municipalities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pyswip>=0.3.3",
]

[project.scripts]
ai-muni-rec = "ai_muni_rec.main:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"