[project]
name = "ai-muni-rec"
version = "0.1.0"
description = "A recommendation system for Oaxaca municipalities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet[all]>=0.28.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyswip>=0.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "unidecode>=1.4.0",
]

[project.scripts]
app = "ai_muni_rec.main:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"
